...
  }

  render(){
  	return(
  	<>
      <View style={styles.userViewContainer} testID="home-view">
        <Text h4 style={styles.loginHeader}>Apartment Rentals Home</Text>
        <Divider style={styles.smallDivider}/>
        <View style={{flexDirection:"row"}}>
          <View style={{flex:1,flexDirection: 'row', justifyContent: 'flex-start'}}>
            <Icon name='user' size={24} color='black'/>
            <Text style={{fontSize:16}}> Welcome {this.props.user ? this.props.user.name : ''},  </Text>
          </View>
          <View style={{flex:1,flexDirection: 'row', justifyContent: 'flex-end', zIndex: 10}}>
            <Icon testID={'logout'} name='power-off' size={24} color='black' onPress={() => this.logOut()}/>
          </View>
        </View>
        <Divider style={styles.smallDivider}/>
        {this.props.user?
          <>
          {this.props.user.role  === 'admin'?
...
